--- a/estilos.css
+++ b/estilos.css
@@ -26,7 +26,7 @@ p {
 
 
 .parrafoprofile {
-    color: rgb(151, 150, 150);
+    color: grey
 }
 
 
@@ -86,6 +86,9 @@ header {
 }
 
 
+li {
+    display: inline-block;
+}
 
 
 
