--- a/portfolioestilo.css
+++ b/portfolioestilo.css
@@ -16,6 +16,7 @@ h2 {
 h3{
     font-family: 'Raleway', sans-serif;
     font-size: 25px;
+    margin-top: 20px;
 }
  
 
@@ -49,4 +50,22 @@ h3{
     width: 100%;
 }
 
+.todo {
+    margin-bottom: 30px;
+}
 
+
+.footer {
+    position: fixed;
+    bottom: 5px;
+    left: 0px;
+    width: 100%;
+    background-color: rgb(0, 0, 0);
+    text-align: center;
+    margin-top: 25px;
+}
+
+.footer p {
+    color: white;
+    font-size: 15px;
+}
